--- a/br.com.feirasverdes.backend/src/main/resources/application.properties
+++ b/br.com.feirasverdes.backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/feiras_verdes?serverTimezone=America/Sao_Paulo&useSSL=false&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
